# prisma-rust-demo

./: .gitignore  Cargo.toml
.cargo/: config.toml
demo/: Cargo.toml
demo/prisma/: schema.prisma
demo/prisma/migrations/20241125020143_cargo_run/: migration.sql
demo/src/: main.rs
prisma-cli/: Cargo.toml
prisma-cli/src/: main.rs
