[package]
name = "blog-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["sqlite"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] } 